Did faalback (inline-block) for section guaranties

--- a/index2.html
+++ b/index2.html
@@ -154,7 +154,7 @@
                         <p class="header__digit">$500.00</p>
                     </div>
                     <a href="./index4.html" class="header__checkout">Checkout</a>
-                    <a href="#" class="header__card">Go to cart</a>
+                    <a href="./index5.html" class="header__card">Go to cart</a>
                 </div>
             </details>
             <details class="header__right-details">
