--- a/index3.html
+++ b/index3.html
@@ -11,55 +11,55 @@
 
 <body>
     <header class="header center">
-        <a class="logo" href="./index.html">
-            <img src="./img2/logo2.png" alt="header logo" class="logo__img">
-            <p class="logo__text">BRAN<span class="logo__color">D</span></p>
-        </a>
-
-        <div class="header__searche">
-            <details class="header__searche-details">
-                <summary class="header__searche-button"><span class="header__searche-text">Browse</span>
-                    <svg class="header__searche-img" width="10px" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 320 512">
-                        <path
-                            d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
-                    </svg>
-                </summary>
-                <div class="header__searche-box">
-                    <div class="header__searche-item">
-                        <h3 class="header__searche-title">Women</h3>
-                        <a href="#" class="header__searche-link">Dresses</a>
-                        <a href="#" class="header__searche-link">Tops</a>
-                        <a href="#" class="header__searche-link">Sweaters/Knits</a>
-                        <a href="#" class="header__searche-link">Jackets/Coats</a>
-                        <a href="#" class="header__searche-link">Blazers</a>
-                        <a href="#" class="header__searche-link">Denim</a>
-                        <a href="#" class="header__searche-link">Leggings/Pants</a>
-                        <a href="#" class="header__searche-link">Skirts/Shorts</a>
-                        <a href="#" class="header__searche-link">Accessories</a>
+        <div class="header__right-container">
+            <a class="logo" href="./index.html">
+                <img src="./img2/logo2.png" alt="header logo" class="logo__img">
+                <p class="logo__text">BRAN<span class="logo__color">D</span></p>
+            </a>
+            <div class="header__searche">
+                <details class="header__searche-details">
+                    <summary class="header__searche-button"><span class="header__searche-text">Browse</span>
+                        <svg class="header__searche-img" width="10px" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 320 512">
+                            <path
+                                d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z" />
+                        </svg>
+                    </summary>
+                    <div class="header__searche-box">
+                        <div class="header__searche-item">
+                            <h3 class="header__searche-title">Women</h3>
+                            <a href="#" class="header__searche-link">Dresses</a>
+                            <a href="#" class="header__searche-link">Tops</a>
+                            <a href="#" class="header__searche-link">Sweaters/Knits</a>
+                            <a href="#" class="header__searche-link">Jackets/Coats</a>
+                            <a href="#" class="header__searche-link">Blazers</a>
+                            <a href="#" class="header__searche-link">Denim</a>
+                            <a href="#" class="header__searche-link">Leggings/Pants</a>
+                            <a href="#" class="header__searche-link">Skirts/Shorts</a>
+                            <a href="#" class="header__searche-link">Accessories</a>
+                        </div>
+                        <div class="header__searche-item">
+                            <h3 class="header__searche-title">Men</h3>
+                            <a href="#" class="header__searche-link">Tees/Tank tops</a>
+                            <a href="#" class="header__searche-link">Shirts/Polos</a>
+                            <a href="#" class="header__searche-link">Sweaters</a>
+                            <a href="#" class="header__searche-link">Sweatshirts/Hoodies</a>
+                            <a href="#" class="header__searche-link">Blazers</a>
+                            <a href="#" class="header__searche-link">Jackets/vests</a>
+                        </div>
                     </div>
-                    <div class="header__searche-item">
-                        <h3 class="header__searche-title">Men</h3>
-                        <a href="#" class="header__searche-link">Tees/Tank tops</a>
-                        <a href="#" class="header__searche-link">Shirts/Polos</a>
-                        <a href="#" class="header__searche-link">Sweaters</a>
-                        <a href="#" class="header__searche-link">Sweatshirts/Hoodies</a>
-                        <a href="#" class="header__searche-link">Blazers</a>
-                        <a href="#" class="header__searche-link">Jackets/vests</a>
-                    </div>
-                </div>
-            </details>
-            <form action="#" class="header__input">
-                <input class="header__field" type="search" placeholder="Search for Item..." />
-                <button type="submit" class="header__glass"><svg class="header__icon" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512" width="15px">
-                        <path
-                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
-                    </svg>
-                </button>
-            </form>
+                </details>
+                <form action="#" class="header__input">
+                    <input class="header__field" type="search" placeholder="Search for Item...">
+                    <button type="submit" class="header__glass"><svg class="header__icon" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 512 512" width="15px">
+                            <path
+                                d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
-
         <div class="header__right">
             <details class="header__basket-details">
                 <summary class="header__basket">
@@ -666,14 +666,14 @@
             <div class="product__sort">
                 <div class="product__sort-box">
                     <h2 class="product__sort-info">Sort By</h2>
-                    <select name="sort" id="" class="product__sort-select">
+                    <select name="sort" class="product__sort-select">
                         <option value="name">Name</option>
                         <option value="price">Price</option>
                     </select>
                 </div>
                 <div class="product__sort-box">
                     <h2 class="product__sort-info">Show</h2>
-                    <select name="sort" id="" class="product__sort-select">
+                    <select name="sort" class="product__sort-select">
                         <option value="03">03</option>
                         <option value="06">06</option>
                         <option value="09">09</option>
